--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<head>
+<link rel="stylesheet" href="styles.css">
+<title>Aluraflix</title>
+</head><head>
+<link rel="stylesheet" href="styles.css">
+<title>Aluraflix</title>
+</head>
 <body>
 <header>ALURAFLIX</header>
 
